fix: abstract readability

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -66,9 +66,10 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(0deg, hsla(var(--glass1) / 0) 18%, hsla(var(--glass1) / 1) 45%);
-    mask: $noiseFilter, linear-gradient(0deg, hsla(var(--glass1) / 0) 18%, hsla(var(--glass1) / 1) 70%);
-    // @include frosted-glass(var(--glass1), 0.75);
+    background: linear-gradient(0deg, hsla(var(--glass1) / 0) 40%, hsla(var(--glass1) / 1) 70%);
+    @include frosted-glass(var(--glass1), 0.55);
+    // background: linear-gradient(0deg, hsla(var(--glass1) / 0) 10%, hsla(var(--glass1) / 1) 60%);
+    // mask: $noiseFilter, linear-gradient(0deg, hsla(var(--glass1) / 0) 20%, hsla(var(--glass1) / 1) 50%);
   }
 }
 
@@ -91,6 +92,10 @@
   height: 568px;
   margin-bottom: $layout--md;
   transform: skewX(-12deg);
+  @include breakpoint(sm) {
+    width: 668px;
+    height: 668px;
+  }
   @include breakpoint(lg) {
     width: 768px;
     height: 768px;
